# neuralswarm-code

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
client/: index.html  (+5 more)
client/core/: Cargo.toml
client/core/src/: connection.rs  executor.rs  lib.rs  main.rs
kernel/: .gitignore  Cargo.toml  neuralswarm.example.yaml
kernel/src/: config.rs  main.rs
kernel/src/kernel/: context.rs  handler.rs  mod.rs  pipeline.rs  registry.rs  workspace.rs
kernel/src/plugins/: mod.rs
kernel/src/server/: http.rs  mod.rs  ws.rs
kernel/src/storage/: session_store.rs
kernel/tests/: integration_test.rs
server/: .env.example  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0f6fe730c840_initial.py  2b7e9b03a045_add_conflicts_table.py  5e8473ac9901_update_agent_model_for_m4.py  9ba95ab9b4f9_add_users_table.py  a1b2c3d4e5f6_add_all_models.py  c395703d6be7_add_project_type_and_client_id_to_.py
server/neuralswarm/: config.py  database.py  seeds.py  server.py
server/neuralswarm/api/: agents.py  auth.py  clients.py  conflicts.py  health.py  memory.py  projects.py  tasks.py  ws.py  ws_client.py  ws_conflicts.py
server/neuralswarm/core/: agent.py  context_manager.py  repository.py  tool_executor.py  tool_metadata.py
server/neuralswarm/models/: __init__.py  agent.py  audit_log.py  base.py  conflict.py  enums.py  llm.py  lock.py  memory.py  project.py  task.py  user.py
server/tests/: conftest.py  test_agent.py  test_agent_pool.py  test_agents_api.py  test_base.py  test_bridge.py  test_central_scheduler.py  test_claude_adapter.py  test_clients.py  test_config.py  test_conflict_manager.py  test_context_manager.py  test_database.py  test_enums.py  test_event_bus.py  test_fallback.py  test_gateway.py  test_hash_guard.py  test_health.py  test_integration.py  test_l0_memory.py  test_l1_memory.py  test_l2_memory.py  test_l3_memory.py  test_local_project.py  test_mcp_client.py  test_models.py  test_openai_adapter.py  test_projects_api.py  test_redis.py  test_repository.py  test_schemas.py  test_sub_scheduler.py  test_tasks_api.py  test_tool_calling.py  test_tool_executor.py  test_tool_executor_bridge.py  test_tools.py  test_worker_agent.py  test_worktree.py  (+2 more)
(+190 files in other folders)
