[project]
name = "neuralswarm"
version = "0.1.0"
description = "NeuralSwarm/Code Server - Multi-Agent Mesh Scheduling System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "websockets>=14.0",
    "mcp>=1.0.0",
    "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
neuralswarm = "neuralswarm.cli:main"

[tool.setuptools.packages.find]
include = ["neuralswarm*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
